# GoBP

./: .coverage  .cursorrules  .gitignore  CHANGELOG.md  CHARTER.md  CLAUDE.md  CONTRIBUTING.md  GoBP_Viewer.bat  README.md  TESTING.md  _tmp_materialize_wave_theory.py  _tmp_materialize_wave_theory3.py  _tmp_materialize_wave_theory_batch.py  _tmp_wave_theory_minimal.py  commit_msg_h2.txt  commit_msg_h7.txt  commit_msg_w10b_t1.txt  commit_msg_w10b_t10.txt  commit_msg_w10b_t2.txt  commit_msg_w10b_t3.txt  commit_msg_w10b_t4.txt  commit_msg_w10b_t5.txt  commit_msg_w10b_t6.txt  commit_msg_w10b_t7.txt  commit_msg_w10b_t8.txt  commit_msg_w10b_t9.txt  commit_msg_w16a05_t1.txt  commit_msg_w16a05_t2.txt  commit_msg_w16a05_t3.txt  commit_msg_w16a05_t4.txt  commit_msg_w16a05_t5.txt  commit_msg_w16a05_t6.txt  commit_msg_w16a05_t7.txt  commit_msg_w16a06_t1.txt  commit_msg_w16a06_t2.txt  projects.json  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.gobp/: config.yaml  id_mapping.json
config/: claude_mcp_multi_project.example.json
docs/: AGENT_RULES.md  ARCHITECTURE.md  COOKBOOK.md  GOBP_SCHEMA_REDESIGN_v2.1.md  GoBP_AI_USER_GUIDE.md  GoBP_ARCHITECTURE.md  GoBP_INSTALL.md  GoBP_PRODUCT.md  HISTORY_SPEC.md  IMPORT_CHECKLIST.md  IMPORT_GUIDE.md  IMPORT_MODEL.md  INPUT_MODEL.md  INSTALL.md  MCP_PROTOCOL.md  MCP_TOOLS.md  README.md  SCHEMA.md  VISION.md  edge_policy_v1.md  gobp_edge_policy_v1.yaml  wave_14_brief.md  wave_17a_series_plan.md
examples/: mihos_import_docs.sh
gobp/: __init__.py
scripts/: data_integrity_audit.py  wave16a06_smoke.py  (+21 more)
(+1578 files in other folders)
